wavparse: Ignore Broadcast Wave Format (BWF) tags when searching for 'fmt' chunk

https://bugzilla.gnome.org/show_bug.cgi?id=723125